--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://BLADIMIRROJAS:Santy0422@cluster0.y1egc.mongodb.net/myTinerary?retryWrites=true&w=majority
+SECRET_KEY="MyKey"
