--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "passport": "^0.5.2"
   }
 }
